--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,11 @@
+Django>=3.0,<4.0
+psycopg2-binary>=2.8
 appdirs==1.4.4
 asgiref==3.3.1
 astroid==2.5
 autopep8==1.5.5
 colorama==0.4.4
 distlib==0.3.1
-Django~=3.1.7
 filelock==3.0.12
 isort==5.7.0
 lazy-object-proxy==1.5.2
