--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -17,10 +17,9 @@ services:
     depends_on:
       - database
   vue:
-    build: 
-      context: ./frontend
-      dockerfile: Dockerfile-dev
+    build: .
     ports:
       - "8080:8080"
     volumes:
-      - ./frontend:/app/src
+      - ./frontend:/app
+    command: npm run serve
