--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -17,7 +17,9 @@ services:
     depends_on:
       - database
   vue:
-    build: .
+    build: 
+      context: .
+      dockerfile: Dockerfile-dev
     ports:
       - "8080:8080"
     volumes:
