--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
+    "vue-material": "^1.0.0-beta-15",
     "vue-router": "^4.0.4",
     "vuex": "^4.0.0"
   },
