--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -21,6 +21,6 @@ virtualenv==20.4.2
 wrapt==1.12.1
 django-environ==0.4.5
 djangorestframework==3.12.0
-PyJWT~=1.7.1
-djangorestframework-simplejwt=4.6.0
-django-cors-headers===3.7.0
+PyJWT==1.7.1
+djangorestframework-simplejwt==4.6.0
+django-cors-headers==3.7.0
