--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "js-sha256": "^0.9.0",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
+    "vue-i18n": "^9.1.4",
     "vue-material": "^1.0.0-beta-15",
     "vue-router": "^4.0.4",
     "vuex": "^4.0.0"
