--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -20,6 +20,7 @@ toml==0.10.2
 virtualenv==20.4.3
 wrapt==1.12.1
 django-environ==0.4.5
-djangorestframework==3.12.4
-PyJWT==2.0.1
-django-cors-headers===3.7.0
+djangorestframework==3.12.0
+PyJWT==1.7.1
+djangorestframework-simplejwt==4.6.0
+django-cors-headers==3.7.0
