--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -18,6 +18,7 @@ jobs:
         python-version: 3.9
     - name: Install dependencies
       run: |
+        cd backend
         python -m pip install --upgrade pip
         pip install flake8 pytest
         pip install django
