--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -3,7 +3,11 @@
 
 name: Python application
 
-on: [push, pull_request]
+on:
+  pull_request:
+    branches:
+    - main
+    - develop
 
 jobs:
   build:
