--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -45,7 +45,9 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Run migrations
-      run: python manage.py migrate
+      run: |
+        cd backend
+        python manage.py migrate
       
     - name: Test with pytest
       run: |
