--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -38,7 +38,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest
         pip install -r requirements.txt
-    - name: Lint with flake8
+    - name: Run lint
       run: |
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
@@ -49,7 +49,7 @@ jobs:
         cd backend
         python manage.py migrate
       
-    - name: Test with pytest
+    - name: Run tests
       run: |
         cd backend
         python manage.py test
