--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -13,7 +13,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    
+
     services:
       postgres:
         image: postgres:10.8
@@ -38,7 +38,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest
         pip install -r requirements.txt
-    - name: Run lint
+    - name: Run backend lint
       run: |
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
@@ -48,8 +48,13 @@ jobs:
       run: |
         cd backend
         python manage.py migrate
-      
+
     - name: Run tests
       run: |
         cd backend
         python manage.py test
+
+    - name: Run frontend lint
+      run: |
+        cd frontend
+        eslint .
