--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -54,6 +54,11 @@ jobs:
         cd backend
         python manage.py test
 
+    - name: Install frontend dependency
+      run: |
+        cd frontend
+        npm install
+        
     - name: Run frontend lint
       run: |
         cd frontend
