75 - Force install eslint

--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -58,7 +58,8 @@ jobs:
       run: |
         cd frontend
         npm install
-        
+        npm install eslint
+
     - name: Run frontend lint
       run: |
         cd frontend
