75 - Save eslint as dev dep

--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -58,7 +58,7 @@ jobs:
       run: |
         cd frontend
         npm install
-        npm install eslint
+        npm install eslint --save-dev
 
     - name: Run frontend lint
       run: |
