--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -14,17 +14,17 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    services:
-      postgres:
-        image: postgres:10.8
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: root
-          POSTGRES_DB: github_actions
-        ports:
-          - 5432:5432
-        # needed because the postgres container does not provide a healthcheck
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+#    services:
+#      postgres:
+#        image: postgres:10.8
+#        env:
+#          POSTGRES_USER: postgres
+#          POSTGRES_PASSWORD: root
+#          POSTGRES_DB: github_actions
+#        ports:
+#          - 5432:5432
+#        # needed because the postgres container does not provide a healthcheck
+#        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
     - uses: actions/checkout@v2
@@ -38,27 +38,28 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest
         pip install -r requirements.txt
-    - name: Run backend lint
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Run migrations
-      run: |
-        cd backend
-        python manage.py migrate
-
-    - name: Run tests
-      run: |
-        cd backend
-        python manage.py test
+#    - name: Run backend lint
+#      run: |
+#        # stop the build if there are Python syntax errors or undefined names
+#        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+#        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+#        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+#    - name: Run migrations
+#      run: |
+#        cd backend
+#        python manage.py migrate
+#
+#    - name: Run tests
+#      run: |
+#        cd backend
+#        python manage.py test
 
     - name: Install frontend dependency
       run: |
         cd frontend
         npm install
-        npm install eslint --save-dev
+        npm install eslint -g
+        eslint .
 
     - name: Run frontend lint
       run: |
