75 - Try it with yarn

--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -59,9 +59,8 @@ jobs:
         cd frontend
         npm install
         npm install eslint -g
-        eslint .
 
     - name: Run frontend lint
       run: |
         cd frontend
-        eslint .
+        yarn eslint .
