--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,14 +40,14 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^7.0.0-0",
-    "jest": "^25.5.4",
+    "jest": "^26.6.3",
     "prettier": "1.19.1",
     "sass": "^1.32.8",
     "sass-loader": "^10.1.1",
     "ts-jest": "^26.5.5",
     "typescript": "~3.9.3",
     "vue-cli-plugin-i18n": "~2.1.0",
-    "vue-jest": "^5.0.0-alpha.7"
+    "vue-jest": "^5.0.0-alpha.8"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -56,6 +56,10 @@
       "json",
       "vue"
     ],
+    "transformIgnorePatterns": [
+      "/node_modules/(?!transpile-me|transpile-me-too).+(js|jsx|ts)$"
+    ],
+    "automock": true,
     "transform": {
       "^.+\\.tsx?$": "ts-jest",
       ".*\\.(vue)$": "vue-jest",
