--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -45,7 +45,7 @@ jobs:
 #          # stop the build if there are Python syntax errors or undefined names
 #          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
 #          flake8 . --count --max-complexity=10 --max-line-length=127 --statistics
-          autopep8 --diff -r -v backend/ --max-line-length 127
+          autopep8 --diff -r -v . --max-line-length 127
 
       - name: Run migrations
         run: python manage.py migrate
