--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -42,9 +42,7 @@ jobs:
 
       - name: Run lint
         run: |
-#          # stop the build if there are Python syntax errors or undefined names
-#          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-#          flake8 . --count --max-complexity=10 --max-line-length=127 --statistics
+          # stop the build if there are Python syntax errors or undefined names
           autopep8 --diff -r -v . --max-line-length 127
 
       - name: Run migrations
