--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -36,14 +36,13 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 pytest
-          pip install --upgrade autopep8
+          pip install install pytest
           pip install -r requirements.txt
 
       - name: Run lint
         run: |
-          # stop the build if there are Python syntax errors or undefined names
-          autopep8 --in-place -r -v . --max-line-length 127
+          pycodestyle . --max-line-length=127
+          echo "If the above fails please run `autopep8 -i -r -v --max-line-length 127 backend/` (see root npm package.json)"
 
       - name: Run migrations
         run: python manage.py migrate
