--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install install pytest
+          pip install pycodestyle pytest
           pip install -r requirements.txt
 
       - name: Run lint
