--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Run lint
         run: |
           pycodestyle . --max-line-length=127
-          echo "If the above fails please run `autopep8 -i -r -v --max-line-length 127 backend/` (see root npm package.json)"
+          echo "If the above fails please run `autopep8 -i -r -v --max-line-length 127 .` (see root npm package.json)"
 
       - name: Run migrations
         run: python manage.py migrate
