Add statisctics to lint

--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Run lint
         run: |
-          pycodestyle . --max-line-length=127
+          pycodestyle . --max-line-length=127 --statistics
           echo "If the above fails please run `autopep8 -i -r -v --max-line-length 127 .` (see root npm package.json)"
 
       - name: Run migrations
