--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@vue/cli": "^4.5.12",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "fork-ts-checker-webpack-plugin": "^6.2.6",
     "js-sha256": "^0.9.0",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
