Fix backend linting (#61)
* Removed --exit-zero from backend lint

* Autopep8 test

* Changed directory autopep8

* Syntax error fix

* Changed to in-place

* Try 1

* Autopep8 fix

* Formatting fixes

* Indentation line fix

* Fix test

* ci edit

* Add statisctics to lint

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "docker-compose -f docker-compose-dev.yml up",
-    "preinstall": "npx only-allow npm"
+    "preinstall": "npx only-allow npm",
+    "lint-fix-backend": "autopep8 -i -r -v --max-line-length 127 backend/",
+    "lint-backend": "pycodestyle backend/ --max-line-length=127"
   },
   "repository": {
     "type": "git",
