--- a/.github/workflows/ci-frontend.yml
+++ b/.github/workflows/ci-frontend.yml
@@ -22,5 +22,18 @@ jobs:
           sudo npm install eslint -g
 
       - name: Run eslint
-        run: eslint . --max-warnings 0
+        run: eslint . --max-warnings 0\
 
+prettier:
+  runs-on: ubuntu-latest
+
+  steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+      with:
+        ref: ${{ github.head_ref }}
+
+    - name: Prettify code
+      uses: creyD/prettier_action@v3.3
+      with:
+        prettier_options: --write **/*.
