--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -7,6 +7,8 @@ services:
       - data1-1:/data1
     expose:
       - "9000"
+    ports:
+      - "9000"
     environment:
       MINIO_ROOT_USER: minio
       MINIO_ROOT_PASSWORD: minio123
