--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "vue-i18n": "^9.1.4",
     "vue-material": "^1.0.0-beta-15",
     "vue-router": "^4.0.6",
+    "vue-spinner": "^1.0.4",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
