--- a/.github/workflows/ci-frontend.yml
+++ b/.github/workflows/ci-frontend.yml
@@ -7,6 +7,20 @@ on:
       - develop
 
 jobs:
+  prettier:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          ref: ${{ github.head_ref }}
+
+      - name: Prettify code
+        uses: creyD/prettier_action@v3.3
+        with:
+          commit_message: "Prettier applied changes"
+
   lint:
     runs-on: ubuntu-latest
     defaults:
@@ -22,5 +36,4 @@ jobs:
           sudo npm install eslint -g
 
       - name: Run eslint
-        run: eslint . --max-warnings 0
-
+        run: eslint . --max-warnings 0\
