--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "core-js": "^3.6.5",
     "js-cookie": "^2.2.1",
     "js-sha256": "^0.9.0",
-    "moment": "^2.29.1",
+    "moment": "github:moment/moment",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
     "vue-i18n": "^9.1.4",
